--- a/src/main/resources/com/example/sacms/clubCreation.fxml
+++ b/src/main/resources/com/example/sacms/clubCreation.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
       <Label layoutX="52.0" layoutY="179.0" text="Enter club name">
          <font>
@@ -54,5 +58,7 @@
          </image>
       </ImageView>
       <TextArea layoutX="52.0" layoutY="329.0" prefHeight="218.0" prefWidth="607.0" style="-fx-border-radius: 20;" />
+      <Label layoutX="63.0" layoutY="255.0" text="Club already exists" textFill="RED" />
+      <Label layoutX="404.0" layoutY="255.0" text="Incorrect ID" textFill="RED" />
    </children>
 </AnchorPane>
