--- a/src/main/resources/com/example/sacms/loginScreen.fxml
+++ b/src/main/resources/com/example/sacms/loginScreen.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-radius: 0;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-radius: 0;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
     <children>
       <ImageView blendMode="SRC_ATOP" fitHeight="680.0" fitWidth="1050.0" pickOnBounds="true">
          <image>
@@ -58,6 +62,8 @@
                </font>
             </PasswordField>
             <Button layoutX="61.0" layoutY="480.0" mnemonicParsing="false" onAction="#onSignInButtonClicked" opacity="0.0" prefHeight="25.0" prefWidth="292.0" />
+            <Label layoutX="55.0" layoutY="209.0" text="Incorrect email" textFill="RED" />
+            <Label layoutX="53.0" layoutY="331.0" text="Incorrect password" textFill="RED" />
          </children>
       </AnchorPane>
     </children>
