--- a/src/main/resources/com/example/sacms/clubsViewClubAdvisor.fxml
+++ b/src/main/resources/com/example/sacms/clubsViewClubAdvisor.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
     <children>
         <ImageView fitHeight="58.0" fitWidth="200.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -64,7 +59,7 @@
       </Label>
       <Button layoutX="497.0" layoutY="150.0" mnemonicParsing="false" onAction="#onCreateClubButtonOptionClicked" prefHeight="43.0" prefWidth="133.0" style="-fx-background-color: #000000; -fx-background-radius: 15;" text="CREATE" textFill="WHITE">
          <font>
-            <Font name="Noto Sans Bold" size="20.0" />
+            <Font name="System Bold" size="20.0" />
          </font>
       </Button>
       <Label layoutX="37.0" layoutY="192.0" prefHeight="31.0" prefWidth="398.0" text="Do you want to Create or Delete a club?">
