--- a/src/main/resources/com/example/sacms/signInZero.fxml
+++ b/src/main/resources/com/example/sacms/signInZero.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="680.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
+<AnchorPane prefHeight="680.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sacms.Controller">
    <children>
       <ImageView fitHeight="680.0" fitWidth="1050.0" pickOnBounds="true">
          <image>
@@ -31,7 +29,7 @@
             </Text>
             <Button layoutX="60.0" layoutY="287.0" mnemonicParsing="false" onAction="#onStudentSignInOneButtonClicked" prefHeight="67.0" prefWidth="171.0" style="-fx-background-color: #F2DEB8; -fx-background-radius: 10;" text="STUDENT">
                <font>
-                  <Font name="Noto Sans Bold" size="20.0" />
+                  <Font name="System Bold" size="20.0" />
                </font>
             </Button>
             <Button layoutX="244.0" layoutY="287.0" mnemonicParsing="false" onAction="#onClubAdvisorSignInOneButtonClicked" prefHeight="67.0" prefWidth="179.0" style="-fx-background-color: #B5C5FF; -fx-background-radius: 10;" text="CLUB ADVISOR">
